<resources>
    <string name="app_name">PRMSCEmployeeApp</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="title_home">Home</string>
    <string name="title_timeoff">Time Off</string>
    <!--    <string name="title_bulletin">Bulletin</string>-->
    <string name="title_bulletin">Announcement</string>
    <string name="title_myinfo">My Info</string>
    <string name="prmsc_employee">PRMSC Employee</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Enter your password...</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome To</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prmsc_employee_portal">PRMSC Employee Portal</string>
    <string name="email_address">Email Address</string>
    <string name="prompt_username">Enter your username...</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="checkin">Checkin</string>
    <string name="wait_fetching_location">Please wait fetching current location....</string>
    <string name="gps_not_enabled">GPS is not Enabled!</string>
    <string name="do_you_want_to_enable_gps">If your GPS is enabled then switch mode to "Higher Accuracy"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="n_a">N/A</string>
    <string name="leaves_summary">Leaves Summary</string>
    <string name="casual_leaves">Casual Leaves</string>
    <string name="sick_leaves">Sick Leaves</string>
    <string name="annual_leaves">Annual Leaves</string>
    <string name="checkin_history">Checkin History</string>
    <string name="view_all">View All</string>
    <string name="upcoming_holidays">Upcoming Holidays</string>
    <string name="title_activity_geofence_maps">GeofenceMapsActivity</string>
    <string name="welcome_comma">"Welcome, "</string>
    <string name="checkedout">Checked Out</string>
    <string name="checkedin">Checked In</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="current_location">Current Location</string>
    <string name="back">Back</string>
    <string name="retry">Retry</string>
    <string name="detecting_your_current_site_location">Detecting your current site location</string>
    <string name="proceed">Proceed</string>
    <string name="not_in_defined_area">You are not inside defined area! To proceed visit your site.</string>
    <string name="choose_details_to_request_leaves">Choose Details To Request Leave</string>
    <string name="leaves_type">Leave Type</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="note">Note</string>
    <string name="request_time_off">Request Time Off</string>
    <string name="leave_history">Leave History</string>
    <string name="from_time">From Time</string>
    <string name="to_time">To Time</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="attachments">Attachments</string>
    <string name="attachment">Attachment (Max 2MB)</string>
    <string name="add_another">Add Another</string>
    <string name="please_write_details_about_request">Please write details about request...</string>
    <string name="please_try_again_later">Please try again later</string>
    <string name="there_is_no_benefits_right_now">There is no benefits right now!</string>
    <string name="team">Team</string>
    <string name="goals">Goals</string>
    <string name="assesments">Assesments</string>
    <string name="load_document">UPLOAD DOCUMENT</string>
    <string name="search_document">Search Document</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="primary_contact">Primary Contact</string>
    <string name="relationship">Relationship</string>
    <string name="home_phone">Home Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="work_phone">Work Phone</string>
    <string name="add_home_phone">+Add Home Phone</string>
    <string name="work_email">Work Email</string>
    <string name="personal_email">Personal Email</string>
    <string name="basic_info">Basic Information</string>
    <string name="employee_id">Employee ID#</string>
    <string name="first_name">First Name</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="hire_date">Hire Date</string>
    <string name="employee_status">Employment Status</string>
    <string name="job_information">Job Information</string>
    <string name="job_title">Job Title</string>
    <string name="reports_to">Reports To</string>
    <string name="department">Department</string>
    <string name="division">Division</string>
    <string name="location">Location</string>
    <string name="profile_image">Profile Image</string>
    <string name="warning">Heat Wave Warning</string>
    <string name="app_access_denied">You dont have permissions to access the application!</string>
    <string name="requested_leaves_exceed_limit">Your selected leave days exceeds max leave limit.</string>
    <string name="select">Select</string>
    <string name="select_leave_type">Select Leave Type!</string>
    <string name="check_internet_connection">Check internet Connectivity!</string>
    <string name="wing">Wing</string>
    <string name="prompt_contactname">Enter contact name...</string>
    <string name="prompt_email_contact">Enter email...</string>
    <string name="select_an_option">Select an option</string>
    <string name="arrow_icon">Arrow icon</string>
    <string name="select_relation">Select Relation</string>
    <string name="prompt_mobile">Enter Mobile Number...</string>
    <string name="prompt_work">Enter Work Number...</string>
    <string name="prompt_home">Enter Home Number...</string>
    <string name="prompt_address">Enter Your Address...</string>
    <string name="action_save">Save</string>
    <string name="arrow">ic_back_arrow</string>
    <string name="header">Header</string>
    <string name="action_update">Update</string>
    <string name="checkout">Checkout</string>
    <string name="provide_from_date">Provide From Date!</string>
    <string name="provide_to_date">Provide To Date!</string>
    <string name="provide_from_time">Provide From Time!</string>
    <string name="provide_to_time">Provide To Time!</string>
    <string name="provide_notes">Provide Notes!</string>
    <string name="password_length_error">Password must be atleast 8 characters long!</string>
    <string name="email_invalid_error">Enter a valid email address!</string>
    <string name="minimum_length_notes">Minimum length of notes should be 10 characters!</string>
    <string name="maximum_length_notes">Maximum length of notes should be 3000 characters!</string>
    <string name="logout">Logout</string>
    <string name="api_generic_err_response">Something went wrong please try again later!</string>
    <string name="attendance_history">Attendance History</string>
    <string name="size_greater_than_2mb">File size is greater than 2MB</string>
    <string name="no_record_found">No Record Found</string>
    <string name="connect_to_binded_wifi">"Kindly connect to binded wifi to proceed. "</string>
    <string name="change_password">Change Password</string>
    <string name="support">Support</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="wrong_current_password">\"Current Password is not correct!\"</string>
    <string name="password_match_error">\"Confirm Password is different from New Password!\"</string>
    <string name="password_format_error"><![CDATA[Password must be at least 8 characters and must contain an upper case character, a lower case character, a numeric character, and a special character #?!@$%^&*-]]></string>
    <string name="announcements">Announcements</string>
    <string name="title_leave_mngt">Leave Mngt</string>
    <string name="days">Days</string>
    <string name="day">Day</string>
    <string name="title_leave_management">Leave Management</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="comments">Comments...</string>
    <string name="approved">Approved</string>
    <string name="provide_comments">Please provides comments!</string>
    <string name="late_commer">Late Commer</string>
    <string name="why_you_get_late">Why are you late?</string>
    <string name="comment">Comment</string>
    <string name="reason">Reason</string>
    <string name="comments_length">Reason must be atleast 10 characters and maximum 250 characters!</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="rejected_reason">Rejected Reason</string>
    <string name="late_reason">Late Reason!</string>
    <string name="title_leave_request">Leave Request</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

</resources>