<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_margin="50dp"
    tools:context="com.lmkr.prmscemployeeapp.ui.fragments.LocationAlertDialogFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/gps_not_enabled"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/confirmation_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/do_you_want_to_enable_gps"
        android:textColor="@color/black"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/enable"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/enable"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/clickable_text_blue_to_grey"
            android:textSize="14dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/disable"
            android:visibility="gone"
            android:textAllCaps="false"
            android:textColor="@color/clickable_text_black_to_grey"
            android:textSize="14dp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>


