<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.myinfo.addContact.AddContactActivity">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.08"
        android:background="@color/app_blue"
        android:contentDescription="@string/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contacts"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_16sdp"
        android:fontFamily="@font/product_sans_bold"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.85"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/edit_text_background"
            android:hint="@string/prompt_contactname"
            android:inputType="text"
            android:paddingTop="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            android:selectAllOnFocus="true"
            android:textColor="@color/grey_dark"
            android:textColorHint="@color/grey_dark"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        android:background="@drawable/edit_text_background"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameLayout"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/edit_text_background"
            android:hint="@string/prompt_email_contact"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            android:selectAllOnFocus="true"
            android:textColor="@color/grey_dark"
            android:textColorHint="@color/grey_dark"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/select_relation"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/etEmailLayout"
        app:layout_constraintStart_toStartOf="@+id/etEmailLayout"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/designSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:inputType="none"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etMobileLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        android:background="@drawable/edit_text_background"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobilePhone"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/edit_text_background"
            android:hint="@string/prompt_mobile"
            android:inputType="phone"
            android:paddingTop="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            android:selectAllOnFocus="true"
            android:textColor="@color/grey_dark"
            android:textColorHint="@color/grey_dark"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etWorkLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        android:background="@drawable/edit_text_background"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMobileLayout"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/workPhone"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/edit_text_background"
            android:hint="@string/prompt_work"
            android:inputType="phone"
            android:paddingTop="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            android:selectAllOnFocus="true"
            android:textColor="@color/grey_dark"
            android:textColorHint="@color/grey_dark"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etHomeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        android:background="@drawable/edit_text_background"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWorkLayout"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/homePhone"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/edit_text_background"
            android:hint="@string/prompt_home"
            android:inputType="phone"
            android:paddingTop="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            android:selectAllOnFocus="true"
            android:textColor="@color/grey_dark"
            android:textColorHint="@color/grey_dark"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etAddressLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        android:background="@drawable/edit_text_background"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHomeLayout"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/edit_text_background"
            android:hint="@string/prompt_address"
            android:inputType="textPostalAddress"
            android:paddingTop="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            android:selectAllOnFocus="true"
            android:textColor="@color/grey_dark"
            android:textColorHint="@color/grey_dark"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="start"
        android:backgroundTint="@color/app_blue"
        android:text="@string/action_save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddressLayout"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.85" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="start"
        android:backgroundTint="@color/app_blue"
        android:text="@string/action_update"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddressLayout"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.85" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/submitButton"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>