<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="-20dp"
                android:backgroundTint="@color/white"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/close"
                app:tint="#ED3030" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/late_commer"
                    android:textColor="@color/app_green"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:background="@color/white"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/current_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:letterSpacing="-0.03"
                        android:text="@string/reason"
                        android:background="@color/white"
                        android:textColor="@color/app_green"
                        android:textSize="12sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etReasonLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:boxCollapsedPaddingTop="0dp"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_password"
                        app:passwordToggleEnabled="false"
                        app:passwordToggleTint="@color/grey_dark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/reason"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:background="@drawable/edit_text_background"
                            android:hint="@string/why_you_get_late"
                            android:paddingTop="@dimen/default_padding"
                            android:paddingBottom="@dimen/default_padding"
                            android:imeOptions="actionNext"
                            android:inputType="textCapSentences"
                            android:textColor="@color/grey_dark"
                            android:textColorHint="@color/grey_dark"
                            android:textCursorDrawable="@null" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/change_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_yes"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:backgroundTint="@color/app_blue"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</ScrollView>